--- a/index.html
+++ b/index.html
@@ -6,32 +6,102 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="">
+<!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="Content-Language" content="en-us"/>
+    <meta http-equiv="Content-Language" content="en-us" />
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/scss/main.css">
 
 </head>
+
 <body>
 
 
 
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
-<![endif]-->
+    <!-- About us -->
+    <div class="about-us">
+        <div class="title-section">
+            <span>What we do</span>
+            <h2>STORY ABOUT US</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
 
-<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-<script src="assets/js/vendor/bootstrap.min.js"></script>
-<script src="assets/js/main.js"></script>
+        <div class="about-us__img">
+            <div class="about-us-01">
+                <div class="about-us__content">
+                    <i class="fas fa-user-friends"></i>
+                    <p>SUPER TEAM</p>
+                </div>
+            </div>
+            <div class="about-us-02">
+                <div class="about-us__content">
+
+                    <i class="fas fa-user-friends"></i>
+                    <p>SUPER TEAM</p>
+                </div>
+
+            </div>
+            <div class="about-us-03">
+                <div class="about-us__content">
+
+                    <i class="fas fa-user-friends"></i>
+                    <p>SUPER TEAM</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="count">
+        <div class="count__content">
+            <div class="count--border">
+                <p>42</p>
+                <span>WEB DESIGN PROJECTS</span>
+            </div>
+            <div class="count--border">
+                <p>123</p>
+                <span>HAPPY CLIENT</span>
+            </div>
+            <div class="count--border">
+                <p>15</p>
+                <span>AWARD WINNER</span>
+            </div>
+            <div class="count--border">
+                <p>99</p>
+                <span>CUP OFF COFFE</span>
+            </div>
+            <div class="count--border">
+                <p>24</p>
+                <span>MEMBERS</span>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/vendor/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
-</html>
 
+</html>
