--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
 <body>
 
 
+    <div class="service">
+        <div class="title-section">
+            <span>What we do</span>
+            <h2>STORY ABOUT US</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
+        <div class="service__content">
 
+        </div>
+    </div>
 
 
 
