--- a/index.html
+++ b/index.html
@@ -28,76 +28,79 @@
 
 <body>
 
+    <header class="header">
+        <div class="header__inner">
+            <h1>
+                <a href="#" class="logo">
+    MoGo
+    </a>
+            </h1>
+            <input type="checkbox" id="chk">
+            <nav class="header__menu">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item">
+                        <a href="#" class="header__menu-link">
+                about
+            </a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="#" class="header__menu-link">
+                service
+            </a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="#" class="header__menu-link">
+                work
+            </a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="#" class="header__menu-link">
+                blog
+            </a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="#" class="header__menu-link">
+                contact
+            </a>
+                    </li>
+                    <li class="header__menu-item">
+                        <label for="chk" class="hide-menu-btn">
+                        <i class="fas fa-times"></i>
+                    </label>
+                    </li>
+                </ul>
+
+            </nav>
+            <ul class="header__menu-icon">
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </li>
+                <li class="header__menu-item item--display">
+                    <button type="button" href="#" class="header__menu-link" data-toggle="modal" data-target="#exampleModal">
+                    <i class="fas fa-search"></i>
+                </button>
+
+                </li>
+            </ul>
+            <label for="chk" class="show-menu-btn">
+            <i class="far fa-bars"></i>
+        </label>
+
+        </div>
+
+    </header>
     <div class="wrapper">
         <!-- Header -->
         <div class="banner">
             <div class="banner-gradiant">
-                <header class="header">
-                    <div class="header__inner">
-                        <a href="#" class="logo">
-                    MoGo
-                    </a>
-                        <input type="checkbox" id="chk">
-                        <nav class="header__menu">
-                            <ul class="header__menu-list">
-                                <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
-                                about
-                            </a>
-                                </li>
-                                <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
-                                service
-                            </a>
-                                </li>
-                                <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
-                                work
-                            </a>
-                                </li>
-                                <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
-                                blog
-                            </a>
-                                </li>
-                                <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
-                                contact
-                            </a>
-                                </li>
-                                <li class="header__menu-item">
-                                    <label for="chk" class="hide-menu-btn">
-                                        <i class="fas fa-times"></i>
-                                    </label>
-                                </li>
-                            </ul>
 
-                        </nav>
-                        <ul class="header__menu-icon">
-                            <li class="header__menu-item">
-                                <a href="#" class="header__menu-link">
-                                    <i class="fas fa-shopping-cart"></i>
-                                </a>
-                            </li>
-                            <li class="header__menu-item item--display">
-                                <button type="button" href="#" class="header__menu-link" data-toggle="modal" data-target="#exampleModal">
-                                    <i class="fas fa-search"></i>
-                                </button>
-
-                            </li>
-                        </ul>
-                        <label for="chk" class="show-menu-btn">
-                            <i class="far fa-bars"></i>
-                        </label>
-
-                    </div>
-
-                </header>
                 <div class="banner__content">
                     <div class="banner__content__top">
                         <p>Creative Template</p>
-                        <h1>WELCOME</h1>
-                        <h1 class="top--border-bottom">TO MOGO</h1>
+                        <h2>WELCOME</h2>
+                        <h2 class="top--border-bottom">TO MOGO</h2>
                         <button href="#">learn more</button>
                     </div>
                     <div class="banner__content__bottom">
@@ -143,7 +146,7 @@
                         </p>
                         <p class="contact__countFollow"><span>15k</span>followers</p>
                         <div class="contact__follow">
-                            <span class="footer__lightItalic footer--gray">Follow Us: </span>
+                            <span class="footer__light-italic footer--gray">Follow Us: </span>
                             <div>
                                 <a href="#">
                                     <i class="fab fa-facebook-f"></i>
@@ -181,27 +184,27 @@
                     <p class="title">BLOGS</p>
                     <ul>
                         <li>
-                            <img class="blog__img" src="/assets/img/blog-1.png" alt="">
+                            <img class="blog__img" src="assets/img/blog-1.png" alt="">
                             <div class="blog__text">
                                 <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
                                 </a>
-                                <span class="footer__lightItalic footer--gray">Jan 9, 2016</span>
+                                <span class="footer__lightI-italic footer--gray">Jan 9, 2016</span>
                             </div>
                         </li>
                         <li>
-                            <img src="/assets/img/blog-2.png" alt="">
+                            <img src="assets/img/blog-2.png" alt="">
                             <div class="blog__text">
                                 <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
                                 </a>
-                                <span class="footer__lightItalic footer--gray">Jan 9, 2016</span>
+                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
                             </div>
                         </li>
                         <li>
-                            <img src="/assets/img/blog-3.png" alt="">
+                            <img src="assets/img/blog-3.png" alt="">
                             <div class="blog__text">
                                 <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
                                 </a>
-                                <span class="footer__lightItalic footer--gray">Jan 9, 2016</span>
+                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
                             </div>
                         </li>
                     </ul>
@@ -209,17 +212,17 @@
                 <div class="footer__content__ins">
                     <p class="title">INSTAGRAM</p>
                     <div class="ins__img">
-                        <img src="/assets/img/footer-ins-1.png" alt="">
-                        <img src="/assets/img/footer-ins-2.png" alt="">
-                        <img src="/assets/img/footer-ins-3.png" alt="">
-                        <img src="/assets/img/footer-ins-4.png" alt="">
-                        <img src="/assets/img/footer-ins-5.png" alt="">
-                        <img src="/assets/img/footer-ins-6.png" alt="">
-                        <img src="/assets/img/footer-ins-7.png" alt="">
-                        <img src="/assets/img/footer-ins-8.png" alt="">
-                        <img src="/assets/img/footer-ins-9.png" alt="">
+                        <img src="assets/img/footer-ins-1.png" alt="">
+                        <img src="assets/img/footer-ins-2.png" alt="">
+                        <img src="assets/img/footer-ins-3.png" alt="">
+                        <img src="assets/img/footer-ins-4.png" alt="">
+                        <img src="assets/img/footer-ins-5.png" alt="">
+                        <img src="assets/img/footer-ins-6.png" alt="">
+                        <img src="assets/img/footer-ins-7.png" alt="">
+                        <img src="assets/img/footer-ins-8.png" alt="">
+                        <img src="assets/img/footer-ins-9.png" alt="">
                     </div>
-                    <a class="footer__lightItalic">View more photos</a>
+                    <a class="footer__light-italic">View more photos</a>
                 </div>
             </div>
             <p class="copyright">
