--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                 <div class="banner__content">
                     <div class="banner__content__top">
                         <p>Creative Template</p>
-                        <h2>WELCOME</h2>
-                        <h2 class="top--border-bottom">TO MOGO</h2>
+                        <h2 class="top--border-bottom"> WELCOME TO MOGO</h2>
                         <button href="#">learn more</button>
                     </div>
                     <div class="banner__content__bottom">
@@ -128,109 +127,109 @@
         </div>
 
 
-        <!-- Footer -->
-        <div class="footer">
-            <div class="footer__map">
-                <div class="footer__map--icon">
-                    <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="footer__map--text">
-                    <span>open map</span>
-                </div>
-            </div>
-            <div class="footer__content">
-                <div class="footer__content__contact">
-                    <h1>MoGo</h1>
-                    <div class="">
-                        <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-                        </p>
-                        <p class="contact__countFollow"><span>15k</span>followers</p>
-                        <div class="contact__follow">
-                            <span class="footer__light-italic footer--gray">Follow Us: </span>
-                            <div>
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-pinterest-p"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-google-plus-g"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-dribbble"></i>
-                                </a>
-                                <a href="#">
-                                    <i class="fab fa-tumblr"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="contact__sub">
-                            <input type="text" placeholder="Your Email...">
-                            <button>SUBSCRIBE</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer__content__blog">
-                    <p class="title">BLOGS</p>
-                    <ul>
-                        <li>
-                            <img class="blog__img" src="assets/img/blog-1.png" alt="">
-                            <div class="blog__text">
-                                <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
-                                </a>
-                                <span class="footer__lightI-italic footer--gray">Jan 9, 2016</span>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="assets/img/blog-2.png" alt="">
-                            <div class="blog__text">
-                                <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
-                                </a>
-                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="assets/img/blog-3.png" alt="">
-                            <div class="blog__text">
-                                <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
-                                </a>
-                                <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__content__ins">
-                    <p class="title">INSTAGRAM</p>
-                    <div class="ins__img">
-                        <img src="assets/img/footer-ins-1.png" alt="">
-                        <img src="assets/img/footer-ins-2.png" alt="">
-                        <img src="assets/img/footer-ins-3.png" alt="">
-                        <img src="assets/img/footer-ins-4.png" alt="">
-                        <img src="assets/img/footer-ins-5.png" alt="">
-                        <img src="assets/img/footer-ins-6.png" alt="">
-                        <img src="assets/img/footer-ins-7.png" alt="">
-                        <img src="assets/img/footer-ins-8.png" alt="">
-                        <img src="assets/img/footer-ins-9.png" alt="">
-                    </div>
-                    <a class="footer__light-italic">View more photos</a>
-                </div>
-            </div>
-            <p class="copyright">
-                <i class="far fa-copyright"></i> 2016 MoGo free PSD template by <a>Laaiq</a>
-            </p>
-        </div>
-    </div>
 
+    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer__map">
+            <div class="footer__map--icon">
+                <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div class="footer__map--text">
+                <span>open map</span>
+            </div>
+        </div>
+        <div class="footer__content">
+            <div class="footer__content__contact">
+                <h1>MoGo</h1>
+                <div class="">
+                    <p class="footer--gray contact__text">Lorem ipsum dolor sit amet , consectetur adipiscing elit, sed do eiusmod tmpor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                    </p>
+                    <p class="contact__countFollow"><span>15k</span>followers</p>
+                    <div class="contact__follow">
+                        <span class="footer__light-italic footer--gray">Follow Us: </span>
+                        <div>
+                            <a href="#">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-pinterest-p"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google-plus-g"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-dribbble"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-tumblr"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="contact__sub">
+                        <input type="text" placeholder="Your Email...">
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__content__blog">
+                <p class="title">BLOGS</p>
+                <ul>
+                    <li>
+                        <img class="blog__img" src="assets/img/blog-1.png" alt="">
+                        <div class="blog__text">
+                            <a>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING
+                            </a>
+                            <span class="footer__lightI-italic footer--gray">Jan 9, 2016</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="assets/img/blog-2.png" alt="">
+                        <div class="blog__text">
+                            <a>CONSECTETUR ADIPISCING ELIT. SED DO EIUSMOD TEMPOR
+                            </a>
+                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="assets/img/blog-3.png" alt="">
+                        <div class="blog__text">
+                            <a>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE
+                            </a>
+                            <span class="footer__light-italic footer--gray">Jan 9, 2016</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__content__ins">
+                <p class="title">INSTAGRAM</p>
+                <div class="ins__img">
+                    <img src="assets/img/footer-ins-1.png" alt="">
+                    <img src="assets/img/footer-ins-2.png" alt="">
+                    <img src="assets/img/footer-ins-3.png" alt="">
+                    <img src="assets/img/footer-ins-4.png" alt="">
+                    <img src="assets/img/footer-ins-5.png" alt="">
+                    <img src="assets/img/footer-ins-6.png" alt="">
+                    <img src="assets/img/footer-ins-7.png" alt="">
+                    <img src="assets/img/footer-ins-8.png" alt="">
+                    <img src="assets/img/footer-ins-9.png" alt="">
+                </div>
+                <a class="footer__light-italic">View more photos</a>
+            </div>
+        </div>
+        <p class="copyright">
+            <i class="far fa-copyright"></i> 2016 MoGo free PSD template by <a>Laaiq</a>
+        </p>
+    </footer>
 
 
     <!-- Modal -->
