--- a/index.html
+++ b/index.html
@@ -31,56 +31,51 @@
 
     <div class="service">
         <div class="title-section">
-            <span>What we do</span>
-            <h2>STORY ABOUT US</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <span>We work with</span>
+            <h2>AMAZING SERVICES</h2>
         </div>
         <div class="service__content">
-            <div class="service__content-top">
-                <div class="service__conetent__item">
-                    <i class="fas fa-camera-retro"></i>
-                    <div class="service__content__text">
-                        <p>PHOTOGRAPHY</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            <div class="service__content__item">
+                <i class="fas fa-camera-retro"></i>
+                <div class="service__content__text">
+                    <p>PHOTOGRAPHY</p>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                 </div>
-                <div class="service__conetent__item">
-                    <i class="fas fa-chart-line"></i>
-                    <div class="service__content__text">
-                        <p>WEB DESIGN</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            </div>
+            <div class="service__content__item">
+                <i class="fas fa-chart-line"></i>
+                <div class="service__content__text">
+                    <p>WEB DESIGN</p>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                 </div>
-                <div class="service__conetent__item">
-                    <i class="fas fa-desktop"></i>
-                    <div class="service__content__text">
-                        <p>CREATIVITY</p>
-                        <span>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            </div>
+            <div class="service__content__item">
+                <i class="fas fa-desktop"></i>
+                <div class="service__content__text">
+                    <p>CREATIVITY</p>
+                    <span>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                 </div>
 
             </div>
-            <div class="service__content-bottom">
-                <div class="service__conetent__item">
-                    <i class="fas fa-book"></i>
-                    <div class="service__content__text">
-                        <p>SEO</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            <div class="service__content__item">
+                <i class="fas fa-book"></i>
+                <div class="service__content__text">
+                    <p>SEO</p>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</span>
                 </div>
-                <div class="service__conetent__item">
-                    <i class="fas fa-home"></i>
-                    <div class="service__content__text">
-                        <p>PHOTOGRAPHY</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            </div>
+            <div class="service__content__item">
+                <i class="fas fa-home"></i>
+                <div class="service__content__text">
+                    <p>CSS/HTML</p>
+                    <span>Consectetur adipiscing elit, sed do eiusmod tempor.</span>
                 </div>
-                <div class="service__conetent__item">
-                    <i class="fas fa-expand"></i>
-                    <div class="service__content__text">
-                        <p>PHOTOGRAPHY</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</span>
-                    </div>
+            </div>
+            <div class="service__content__item">
+                <i class="fas fa-expand"></i>
+                <div class="service__content__text">
+                    <p>DIGITAL</p>
+                    <span>Lorem ipsum dolor sit amet, consectetur, sed do eiusmod tempor.</span>
                 </div>
             </div>
 
