--- a/index.html
+++ b/index.html
@@ -6,32 +6,150 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="">
+<!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="Content-Language" content="en-us"/>
+    <meta http-equiv="Content-Language" content="en-us" />
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/vendor/slick.css">
+    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/scss/main.css">
 
 </head>
+
 <body>
 
+    <div class="what-we-do">
+        <div class="title-section">
+            <span>Service</span>
+            <h2>WHAT WE DO</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
+        <div class="what-we-do__content">
+            <div class="what-we-do__content__img">
+                <img src="/assets/img/service.png" alt="#">
+            </div>
+            <div class="what-we-do__content__text">
+                <div class="text">
+                    <div class="text__title" id="text__title-01">
+                        <div class="text__title-img">
+                            <i class="fas fa-image"></i>
+                            <p> PHOTOGRAPHY</p>
+                        </div>
+                        <div class="icon">
+                            <button onclick="myFunction1()">
+                              <i class="fas fa-chevron-up" id="icon-tranform-01"></i>
+                          </button>
+                        </div>
+                    </div>
+                    <div class="text__content" id="text-01">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+                <div class="text">
+                    <div class="text__title" id="text__title-02">
+                        <div class="text__title-img">
+                            <i class="fas fa-sliders-h icon-tranforms"></i>
+                            <p> CREATIVITY</p>
+                        </div>
+                        <div class="icon">
+                            <button onclick="myFunction2()">
+                            <i class="fas fa-chevron-up" id="icon-tranform-02"></i>
+                        </button>
+                        </div>
+                    </div>
+                    <div class="text__content" id="text-02">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+                <div class="text">
+                    <div class="text__title" id="text__title-03">
+                        <div class="text__title-img">
+                            <i class="fas fa-bullseye"></i>
+                            <p> WEB DESIGN</p>
+                        </div>
+                        <div class="icon">
+                            <button onclick="myFunction3()">
+                          <i class="fas fa-chevron-up" id="icon-tranform-03"></i>
+                      </button>
+                        </div>
+                    </div>
+                    <div class="text__content" id="text-03">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    <div class="feed-back">
+        <div class="use-slick slider">
+            <div class="feed-back__content">
+                <div class="content-icon">
+                    <i class="far fa-comment-alt"></i>
+                </div>
+                <div class="content-text">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        "
+                    </p>
+                    <span>Jon Doe</span>
+                </div>
+            </div>
+            <div class="feed-back__content">
+                <div class="content-icon">
+                    <i class="far fa-comment-alt"></i>
+                </div>
+                <div class="content-text">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        "
+                    </p>
+                    <span>Jon Doe</span>
+                </div>
+            </div>
+            <div class="feed-back__content">
+                <div class="content-icon">
+                    <i class="far fa-comment-alt"></i>
+                </div>
+                <div class="content-text">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        "
+                    </p>
+                    <span>Jon Doe</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
-<![endif]-->
 
-<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-<script src="assets/js/vendor/bootstrap.min.js"></script>
-<script src="assets/js/main.js"></script>
+
+
+    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/vendor/bootstrap.min.js"></script>
+    <script src="assets/js/vendor/slick.js"></script>
+    <script src="assets/js/main.js"></script>
+
 
 </body>
-</html>
 
+
+
+</html>
