Team update ver1.1

--- a/index.html
+++ b/index.html
@@ -106,11 +106,38 @@
                 </div>
             </div>
         </div>
-
-        <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-        <script src="assets/js/vendor/bootstrap.min.js"></script>
-        <script src="assets/js/main.js"></script>
     </div>
+
+    <div class="icon-design">
+        <div class="icon-design__content">
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-1.png" alt="">
+            </div>
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-5.png" alt="">
+            </div>
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-3.png" alt="">
+            </div>
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-4.png" alt="">
+            </div>
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-5.png" alt="">
+            </div>
+            <div class="icon-design__img">
+                <img src="/assets/img/on-work-6.png" alt="">
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/vendor/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
