--- a/index.html
+++ b/index.html
@@ -21,20 +21,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/vendor/slick.css">
+    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="assets/scss/main.css">
 
 </head>
 
 <body>
-    <div class="title-section">
-        <span>What we do</span>
-        <h2>STORY ABOUT US</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    </div>
+
     <div class="container">
         <div class="row">
             <div class="work">
+                <div class="title-section">
+                    <span>What we do</span>
+                    <h2>STORY ABOUT US</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
                 <div class="col-sm-3 ">
                     <div class="work__content">
                         <div class="work__img img-01">
@@ -116,12 +120,54 @@
             </div>
 
         </div>
+
+
+        <div class="feed-back">
+            <div class="use-slick slider">
+                <div class="feed-back__content">
+                    <div class="content-icon">
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="content-text">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            "
+                        </p>
+                        <span>Jon Doe</span>
+                    </div>
+                </div>
+                <div class="feed-back__content">
+                    <div class="content-icon">
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="content-text">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            "
+                        </p>
+                        <span>Jon Doe</span>
+                    </div>
+                </div>
+                <div class="feed-back__content">
+                    <div class="content-icon">
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="content-text">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            "
+                        </p>
+                        <span>Jon Doe</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
 
 
 
     <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/vendor/slick.js"></script>
     <script src="assets/js/vendor/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
 
