--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
     <div class="container">
         <div class="row">
+            <div class="title-section">
+                <span>What we do</span>
+                <h2>STORY ABOUT US</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
             <div class="work">
-                <div class="title-section">
-                    <span>What we do</span>
-                    <h2>STORY ABOUT US</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                </div>
                 <div class="col-sm-3 ">
                     <div class="work__content">
                         <div class="work__img img-01">
@@ -122,39 +122,36 @@
         </div>
 
 
-        <div class="feed-back">
-            <div class="use-slick slider">
+        <div class="feed-back-01">
+            <div class="use-slick-01 slider">
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
+                    <div class="content-img">
+                        <img src="assets/img/under-work.png" alt="">
                     </div>
                     <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
+                        <p>"“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et delore magna aliqua. Ut enim add minim veniam, quis nostrud exercitation."
                         </p>
-                        <span>Jon Doe</span>
+                        <span>Joshua Earle</span>
                     </div>
                 </div>
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
+                    <div class="content-img">
+                        <img src="assets/img/under-work.png" alt="">
                     </div>
                     <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
+                        <p>"“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et delore magna aliqua. Ut enim add minim veniam, quis nostrud exercitation."
                         </p>
-                        <span>Jon Doe</span>
+                        <span>Joshua Earle</span>
                     </div>
                 </div>
                 <div class="feed-back__content">
-                    <div class="content-icon">
-                        <i class="far fa-comment-alt"></i>
+                    <div class="content-img">
+                        <img src="assets/img/under-work.png" alt="">
                     </div>
                     <div class="content-text">
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            "
+                        <p>"“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et delore magna aliqua. Ut enim add minim veniam, quis nostrud exercitation."
                         </p>
-                        <span>Jon Doe</span>
+                        <span>Joshua Earle</span>
                     </div>
                 </div>
             </div>
