People say ver 1.0

--- a/index.html
+++ b/index.html
@@ -6,32 +6,92 @@
 <!--[if IE 8]>
 <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="">
+<!--<![endif]-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="Content-Language" content="en-us"/>
+    <meta http-equiv="Content-Language" content="en-us" />
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/scss/main.css">
 
 </head>
+
 <body>
 
+    <div class="say">
+        <div class="title-section">
+            <span>Happy Clients</span>
+            <h2>WHAT PEOPLE SAY</h2>
+        </div>
+        <div class="say__content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="say__content__item">
+                            <div class="item__img">
+                                <img src="assets/img/say-1.png" alt="">
+                            </div>
+                            <div class="item__text">
+                                <h4>MATTHEW DIX</h4>
+                                <span>Graphic Design</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
+                            </div>
+                        </div>
+                        <div class="say__content__item">
+                            <div class="item__img">
+                                <img src="assets/img/say-2.png" alt="">
+                            </div>
+                            <div class="item__text">
+                                <h4>NICK KARVOUNIS</h4>
+                                <span>Graphic Design</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="say__content__item">
+                            <div class="item__img">
+                                <img src="assets/img/say-3.png" alt="">
+                            </div>
+                            <div class="item__text">
+                                <h4>JAELYNN CASTILLO</h4>
+                                <span>Graphic Design</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
+                            </div>
+                        </div>
+                        <div class="say__content__item">
+                            <div class="item__img">
+                                <img src="assets/img/say-4.png" alt="">
+                            </div>
+                            <div class="item__text">
+                                <h4>MIKE PRETTRUCCI</h4>
+                                <span>Graphic Design</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
-<![endif]-->
-
-<script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
-<script src="assets/js/vendor/bootstrap.min.js"></script>
-<script src="assets/js/main.js"></script>
+    <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/vendor/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
-</html>
 
+</html>
