people say ver1.1

--- a/index.html
+++ b/index.html
@@ -34,57 +34,53 @@
             <h2>WHAT PEOPLE SAY</h2>
         </div>
         <div class="say__content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="say__content__item">
-                            <div class="item__img">
-                                <img src="assets/img/say-1.png" alt="">
-                            </div>
-                            <div class="item__text">
-                                <h4>MATTHEW DIX</h4>
-                                <span>Graphic Design</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
-                            </div>
-                        </div>
-                        <div class="say__content__item">
-                            <div class="item__img">
-                                <img src="assets/img/say-2.png" alt="">
-                            </div>
-                            <div class="item__text">
-                                <h4>NICK KARVOUNIS</h4>
-                                <span>Graphic Design</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
+            <div class="say__content__list">
+                <div class="say__content__item">
+                    <div class="item__img">
+                        <img src="assets/img/say-1.png" alt="">
                     </div>
-                    <div class="col-sm-6">
-                        <div class="say__content__item">
-                            <div class="item__img">
-                                <img src="assets/img/say-3.png" alt="">
-                            </div>
-                            <div class="item__text">
-                                <h4>JAELYNN CASTILLO</h4>
-                                <span>Graphic Design</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
-                            </div>
-                        </div>
-                        <div class="say__content__item">
-                            <div class="item__img">
-                                <img src="assets/img/say-4.png" alt="">
-                            </div>
-                            <div class="item__text">
-                                <h4>MIKE PRETTRUCCI</h4>
-                                <span>Graphic Design</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                            </div>
-                        </div>
+                    <div class="item__text">
+                        <h4>MATTHEW DIX</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
                     </div>
-
+                </div>
+                <div class="say__content__item">
+                    <div class="item__img">
+                        <img src="assets/img/say-2.png" alt="">
+                    </div>
+                    <div class="item__text">
+                        <h4>NICK KARVOUNIS</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
                 </div>
             </div>
-
+            <div class="say__content__list">
+                <div class="say__content__item">
+                    <div class="item__img">
+                        <img src="assets/img/say-3.png" alt="">
+                    </div>
+                    <div class="item__text">
+                        <h4>JAELYNN CASTILLO</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minmim.</p>
+                    </div>
+                </div>
+                <div class="say__content__item">
+                    <div class="item__img">
+                        <img src="assets/img/say-4.png" alt="">
+                    </div>
+                    <div class="item__text">
+                        <h4>MIKE PRETTRUCCI</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    </div>
     </div>
 
 
