--- a/index.html
+++ b/index.html
@@ -33,7 +33,59 @@
             <h2>LATEST BLOG</h2>
         </div>
         <div class="blog__content">
+            <div class="blog__content__item">
+                <div class="item__img">
+                    <img src="assets/img/blog-1.png" alt="">
+                    <div class="item__img-abs">
+                        <span>15</span>
+                        <p>Jan</p>
+                    </div>
+                </div>
+                <div class="item__text">
+                    <span>LOREM IPSUM DOLOR SIT AMET</span>
+                    <p>Consectetur adipiscing elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua</p>
+                    <div class="item__text__icon">
 
+                        <a href="#"><i class="fas fa-eye"></i> 512</a>
+                        <a href="#"><i class="fas fa-comment-dots"></i> 17</a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="blog__content__item">
+                <div class="item__img">
+                    <img src="assets/img/blog-2.png" alt="">
+                    <div class="item__img-abs">
+                        <span>14</span>
+                        <p>Jan</p>
+                    </div>
+                </div>
+                <div class="item__text">
+                    <span>SED DO EIUSMOD TEMPOR</span>
+                    <p>Adipiscing elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="item__text__icon">
+                        <a href="#"><i class="fas fa-eye"></i> 922</a>
+                        <a href="#"><i class="fas fa-comment-dots"></i> 42</a>
+                    </div>
+                </div>
+            </div>
+            <div class="blog__content__item">
+                <div class="item__img">
+                    <img src="assets/img/blog-3.png" alt="">
+                    <div class="item__img-abs">
+                        <span>12</span>
+                        <p>Jan</p>
+                    </div>
+                </div>
+                <div class="item__text">
+                    <span>INCIDIDUNT UT LABORE ET DOLORE</span>
+                    <p>Elit, sed do eiusmod temor incididunt ut labore et dolore magna aliqua</p>
+                    <div class="item__text__icon">
+                        <a href="#"><i class="fas fa-eye"></i> 1560</a>
+                        <a href="#"><i class="fas fa-comment-dots"></i> 10</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
