refactor : sap xep cho

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="assets/scss/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
@@ -188,7 +188,19 @@
             </div>
         </div>
     </div>
+    <div class="design">
+        <div class="design__content">
+            <div class="title-section">
+                <span>For all devices</span>
+                <h2>UNIQUE DESIGN</h2>
+            </div>
+            <div class="design__img">
+                <img src="assets/img/enqui-large.png" alt="">
+                <img class="img-position" src="assets/img/enqui-small.png" alt="">
 
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
@@ -316,19 +328,7 @@
 
 
 
-    <div class="design">
-        <div class="design__content">
-            <div class="title-section">
-                <span>For all devices</span>
-                <h2>UNIQUE DESIGN</h2>
-            </div>
-            <div class="design__img">
-                <img src="assets/img/enqui-large.png" alt="">
-                <img class="img-position" src="assets/img/enqui-small.png" alt="">
 
-            </div>
-        </div>
-    </div>
 
 
 
